# platonic_solid

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: platonic_solid.h
test/: main.cpp
